[gd_scene load_steps=7 format=3 uid="uid://gxfiwph6tqkc"]

[ext_resource type="PackedScene" uid="uid://dmlpnp15mw2fo" path="res://addons/window_system/windows/base_window.tscn" id="1_xo436"]
[ext_resource type="Theme" uid="uid://03q268pfdt2r" path="res://src/themes/font_theme.tres" id="2_o4g3v"]
[ext_resource type="Script" uid="uid://ca6qmkfpwiva6" path="res://src/windows/dbase_editor/text_entry_dialog.gd" id="3_o7ktg"]
[ext_resource type="StyleBox" uid="uid://8fmbo06bq5bv" path="res://src/themes/window_panel_theme.tres" id="4_ng8ic"]
[ext_resource type="PackedScene" uid="uid://dkqacuc6f5k1d" path="res://src/windows/editor/palette_window.tscn" id="4_o7ktg"]
[ext_resource type="PackedScene" uid="uid://vh534r141vnm" path="res://src/windows/dbase_editor/text_selection.tscn" id="6_hp3o2"]

[node name="TextEntryDialog" instance=ExtResource("1_xo436")]
offset_right = 800.0
offset_bottom = 300.0
theme = ExtResource("2_o4g3v")
script = ExtResource("3_o7ktg")
exclusive = true
show_maximize_button = false
show_focus_highlight = false
minimize_style = "fade_out"
panel_corner_radius = 0
panel_style_override = ExtResource("4_ng8ic")

[node name="MarginContainer" type="MarginContainer" parent="Contents/VBoxContainer/MainContainer" index="0"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Contents/VBoxContainer/MainContainer/MarginContainer" index="0"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer" index="0"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer" index="0"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer" index="0"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer" index="0"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "Text:"

[node name="TextEdit" type="TextEdit" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer" index="1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
emoji_menu_enabled = false
wrap_mode = 1
caret_blink = true
caret_draw_when_editable_disabled = true

[node name="HBoxContainer3" type="HBoxContainer" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer" index="1"]
layout_mode = 2

[node name="Label" type="Label" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer3" index="0"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "Audio:"

[node name="AudioOffsetEdit" type="LineEdit" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer3" index="1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "DBase500 Offset"

[node name="PlayAudioButton" type="Button" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer3" index="2"]
unique_name_in_owner = true
layout_mode = 2
text = "Play"

[node name="Control" type="Control" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer3" index="3"]
layout_mode = 2
size_flags_horizontal = 3

[node name="InvalidOffsetLabel" type="Label" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer3/Control" index="0"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -72.0
offset_top = -12.0
offset_right = 72.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(100, 0, 0, 1)
text = "Invalid Offset"

[node name="HBoxContainer2" type="HBoxContainer" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer" index="2"]
layout_mode = 2

[node name="Label" type="Label" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2" index="0"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "Color:"

[node name="ColorRect" type="ColorRect" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2" index="1"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 0)
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer" index="1"]
layout_mode = 2

[node name="ReferencesContainer" type="VBoxContainer" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer" index="2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer/ReferencesContainer" index="0"]
visible = false
layout_mode = 2
text = "References"

[node name="ReferencesList" type="ItemList" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer/ReferencesContainer" index="1"]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
size_flags_vertical = 3

[node name="MakeUniqueButton" type="Button" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer/ReferencesContainer" index="2"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Make Unique"

[node name="HSeparator" type="HSeparator" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer" index="1"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer" index="2"]
layout_mode = 2

[node name="Control" type="Control" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer2" index="0"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SelectButton" type="Button" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer2/Control" index="0"]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_right = 158.0
offset_bottom = 32.0
size_flags_horizontal = 2
text = "Select Existing"

[node name="ClearButton" type="Button" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer2" index="1"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 6
text = "Clear"

[node name="SaveButton" type="Button" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer2" index="2"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 10
text = "Save"

[node name="Control2" type="Control" parent="." index="2"]
layout_mode = 2
mouse_filter = 2

[node name="PaletteWindow" parent="Control2" index="0" instance=ExtResource("4_o7ktg")]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -230.0
offset_right = 300.0
offset_bottom = 230.0
grow_horizontal = 2
grow_vertical = 2
exclusive = true
allow_off_click = true
header = false

[node name="TextSelection" parent="Control2" index="1" instance=ExtResource("6_hp3o2")]
unique_name_in_owner = true
layout_mode = 1

[connection signal="gui_input" from="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/TextEdit" to="." method="_on_text_edit_gui_input"]
[connection signal="text_changed" from="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer3/AudioOffsetEdit" to="." method="_on_audio_offset_edit_text_changed"]
[connection signal="pressed" from="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer3/PlayAudioButton" to="." method="_on_play_audio_button_pressed"]
[connection signal="gui_input" from="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/ColorRect" to="." method="_on_color_rect_gui_input"]
[connection signal="item_activated" from="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer/ReferencesContainer/ReferencesList" to="." method="_on_references_list_item_activated"]
[connection signal="pressed" from="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer/ReferencesContainer/MakeUniqueButton" to="." method="_on_make_unique_button_pressed"]
[connection signal="pressed" from="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer2/Control/SelectButton" to="." method="_on_select_button_pressed"]
[connection signal="pressed" from="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer2/ClearButton" to="." method="_on_clear_button_pressed"]
[connection signal="pressed" from="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer2/SaveButton" to="." method="_on_save_button_pressed"]
